# sqlserver-to-postgresql-ai-tool

./: .gitignore  README.md  pyproject.toml
common/: ai.py  config.py  db.py  file.py
logic_migrator/: main.py  prompts.py  stored_procedure_converter.py
sqlserver_to_postgresql/: main.py
